app/assets/stylesheets/charts.scss
@import "mixin";

.stats-well {
 border: 1px solid #d7d7d7;
 -moz-border-radius: 3px;-webkit-border-radius: 3px;-o-border-radius: 3px;-ms-border-radius: 3px;-khtml-border-radius: 3px;border-radius: 3px;
 background-color: #f9f8f8;
 background-size: 100%;
 background-image: -webkit-gradient(linear,50% 0,50% 100%,color-stop(0%,#f7f7f7),color-stop(100%,#eee));background-image: -webkit-linear-gradient(#f7f7f7,#eee);background-image: -moz-linear-gradient(#f7f7f7,#eee);background-image: -o-linear-gradient(#f7f7f7,#eee);background-image: -ms-linear-gradient(#f7f7f7,#eee);background-image: linear-gradient(#f7f7f7,#eee);
 padding: 13px;
 min-width: 280px;
 min-height: 100px;
 margin-bottom: 15px;
  h2, h4{
    font-weight: normal;
  }
}

.fact_chart {
  min-height: 450px !important;
  width: 560px !important;
  padding: 0 !important;
  text-align: center;
  font-weight: bold;
  overflow: hidden;
}

#statistics{
  .stats-well{
    float: left;
    padding: 10px 20px;
    margin: 0 0 20px 20px;
    &:hover{
      border-color:#0069d6;
      @include box-shadow(0 1px 4px rgba(0, 105, 214, 0.25));
    }
  }
}

#reports .stats-well{
  min-height: 380px;
}

#hosts .stats-well{
  min-height: 270px;
}

.statistics-bar{
  width: 260px;
  height: 305px;
  margin: 0px auto 27px auto;
}

.statistics-pie{
  width: 450px;
  height: 450px;
  margin: 12px auto;
  &.small{
    width: 240px;
    height: 240px;
  }
}

.modal-dialog .statistics-pie{
  margin-bottom: 46px;
  .pieLabel{
    margin-left: -30px;
    margin-top: -10px;
    font-weight: bold;
  }
}

.axisLabels{
  color: #626262;
  font-weight: bold;
}

#flot-tooltip {
  font-size: 12px;
  font-family: 'Overpass', Interstate, sans-serif;
  position: absolute;
  display: none;
  border: 2px solid;
  padding: 2px;
  background-color: #FFF;
  opacity: 0.8;
  z-index: 100;
  -moz-border-radius: 5px; -webkit-border-radius: 5px; -khtml-border-radius: 5px; border-radius: 5px;
  b{
    color: black;
    font-weight: bold;
  }
}

.xAxis > .tickLabel
{
 margin-top:15px;
 -moz-transform:rotate(-45deg);
 -o-transform:rotate(-45deg);
 -webkit-transform:rotate(-45deg);
 filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
}

.pie-title{
 color: #626262;
}

.pieLabel{
 text-align:center;
 font-size: 16px;
 .percent{
   font-size: 28px;
 }
}

.statistics-pie.small .overlay {
  background: url(/assets/pie_overlay.png) no-repeat;
  background-size: cover;
  -ms-behavior: url(/assets/background-size.htc);
  z-index: 1;
}

.statistics-chart{
  height: 270px;
  width: 100%;
  margin-bottom: 20px;
  font-size: 14px;
}

#host-show{
 .statistics-chart{
    height: 230px;
  }
  .chart{
    height: 250px;
  }
}

.reset-zoom{
  float: right;
}
#legendContainer table{
  width:  100%;
}

.legend td.legendColorBox,
#legendContainer td.legendColorBox{
  &:hover,
  &.disabled:hover{
    background-color: #0069d6;
    color: white;
    cursor: pointer;
  }
  &.disabled{
    opacity: (0.3);
  }
}

